src/snapshots/workbridge__ui__snapshot_tests__activity_indicator_overrides_status_message.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (1) ───────┐┌ Claude Code ────────────────────────────────────────┐
│  ACTIVE (0) (1)       ││                                                     │
│> [IM] Build feature   ││  Build feature                                      │
│  branch-act-1 [no wt] ││                                                     │
│                       ││  Status      Implementing                           │
│                       ││  Backend     Local file                             │
│                       ││  Repo        /repo/act-1/0                          │
│                       ││  Branch      branch-act-1                           │
│                       ││  Worktree    (none)                                 │
│                       ││  PR          (none)                                 │
│                       ││  Issue       (none)                                 │
│                       ││  Errors      (none)                                 │
│                       ││                                                     │
│                       ││  Press Enter to start a session.                    │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
Build feature | [Implementing] | 0
 ⠸ Creating pull request...
