src/snapshots/workbridge__ui__snapshot_tests__alert_dialog.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
  List    Board                                                Tab: switch view
┌ Work Items (0) ───────┐┌ Claude Code ────────────────────────────────────────┐
│                       ││                                                     │
│  No work items.       ││  Welcome to workbridge                              │
│                       ││                                                     │
│  Ctrl+N: quick start  ││  Ctrl+N    - Quick start session                    │
│  Ctrl+B: backlog ticke││  Ctrl+B    - New backlog ticket                     │
│                       ││  Up/Down   - Navigate items                         │
│                   ╭ Error ───────────────────────────────╮t                  │
│                   │                                      │                   │
│                   │ PR close failed: permission denied   │                   │
│                   │                                      │                   │
│                   │ [Enter/Esc]  OK                      │                   │
│                   │                                      │                   │
│                   │                                      │                   │
│                   ╰──────────────────────────────────────╯                   │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
