src/snapshots/workbridge__ui__snapshot_tests__board_view_blocked_item.snap
---
source: src/ui.rs
expression: "render(&app, 120, 40)"
---
  List    Board                          Tab: switch view | <-/->: columns | Shift+arrow: move item | Enter: drill down
┌ Backlog (0) ───────────────┐┌ Planning (0) ──────────────┐┌ Implementing (2) ──────────┐┌ Review (0) ────────────────┐
│                            ││                            ││> Normal work               ││                            │
│  No items                  ││  No items                  ││  [BK] Blocked task         ││  No items                  │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘
Blocked task | [Blocked] | /repo/bk1/0
