src/snapshots/workbridge__ui__snapshot_tests__board_view_empty.snap
---
source: src/ui.rs
assertion_line: 2289
expression: "render(&app, 80, 24)"
---
┌ Backlog (0) ─────┐┌ Planning (0) ────┐┌ Implementing (0) ┐┌ Review (0) ──────┐
│                  ││                  ││                  ││                  │
│  No items        ││  No items        ││  No items        ││  No items        │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
└──────────────────┘└──────────────────┘└──────────────────┘└──────────────────┘
