src/snapshots/workbridge__ui__snapshot_tests__board_view_items_distributed.snap
---
source: src/ui.rs
expression: "render(&app, 120, 40)"
---
  List    Board    Dashboard             Tab: switch view | <-/->: columns | Shift+arrow: move item | Enter: drill down
┌ Backlog (1) ───────────────┐┌ Planning (1) ──────────────┐┌ Implementing (1) ──────────┐┌ Review (1) ────────────────┐
│> Add caching layer         ││Refactor auth middleware    ││Fix race condition          ││Update CI pipeline          │
│                            ││                            ││                            ││PR#42 ok                    │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
│                            ││                            ││                            ││                            │
└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘
Refactor auth middleware | [Planning] | 0
