src/snapshots/workbridge__ui__snapshot_tests__board_view_with_status_bar.snap
---
source: src/ui.rs
expression: "render(&app, 80, 24)"
---
 Tab: switch view | <-/->: columns | Shift+arrow: move item | Enter: drill down
┌ Backlog (1) ─────┐┌ Planning (0) ────┐┌ Implementing (0) ┐┌ Review (0) ──────┐
│> Test item       ││                  ││                  ││                  │
│                  ││  No items        ││  No items        ││  No items        │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
│                  ││                  ││                  ││                  │
└──────────────────┘└──────────────────┘└──────────────────┘└──────────────────┘
Test item | [Backlog] | 0
Item moved to Planning
